# MyNewVideoPlayer

./: README.md  settings.gradle
app/: build.gradle  platform.jks
app/src/androidTest/java/com/mark/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  nativelib.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/jnihelper/: AndroidHelper.cpp  AndroidHelper.h  StrHelper.cpp
app/src/main/cpp/player/: FFDemux.cpp  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.cpp  FFdecode.cpp  FFdecode.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IDecode.cpp  IDecode.h  IDemux.cpp  IObserver.cpp  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerPorxy.cpp  IPlayerPorxy.h  IVideoView.h  SLAudioPlay.cpp  XData.cpp  XData.h  XEGL.cpp  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h  XThread.cpp  XThread.h
app/src/main/java/com/mark/myapplication/: AppApplication.java
app/src/main/java/com/mark/myapplication/bean/: MediaBean.kt  MediaType.java  PlayerEvent.java
app/src/main/java/com/mark/myapplication/db/: DBAdapter.java  MyDBOpenHelper.java
app/src/main/java/com/mark/myapplication/event/: BaseEvent.java  BaseStickyEvent.java
app/src/main/java/com/mark/myapplication/exception/: PlayException.java
app/src/main/java/com/mark/myapplication/player/core/: IPlay.java  (+4 more)
app/src/main/java/com/mark/myapplication/ui/: BaseActivity.java  MainActivity.kt
app/src/main/java/com/mark/myapplication/util/: AppExecutors.java  DateUtils.java  PhoneLightUtil.java  StringUtils.java  ToastUtils.java  VolumeUtil.java
app/src/main/java/com/mark/myapplication/view/: DLayoutManager.java  DRecyclerView.java
app/src/main/res/layout/: activity_main.xml  activity_player_main.xml  dialog_add_mediabean.xml  dialog_info.xml  fragemnt_media_home.xml  include_home_toolbar.xml  include_player_bottom_nv.xml  include_player_top_toolbar.xml  item_player_home.xml  player_main_view.xml
app/src/main/res/menu/: nav_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mark/myapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
